test/compile-fail/resolution/use/renamed/expected.txt
error: unresolved item `d`
   ┌─ ./test/compile-fail/resolution/use/renamed/top.rhdl:10:11
   │
10 │ use a::b::d;
   │           ^ no `d` item in `b`

